--- a/data/headers.yml
+++ b/data/headers.yml
@@ -3,16 +3,14 @@
   link: "./"
 
 - item: 作者
-  icon: fab fa-hive
-  link: https://weiyan.cc
+  icon: fa fa-book
+  link: https://www.yuque.com/shenweiyan
 
-- item: 关于
+- item: 配置
   icon: fa fa-cog
   link: ""
   list:
-    - name: 教程
-      url: "https://github.com/shenweiyan/Knowledge-Garden/discussions/10"
-    - name: 主题
-      url: "https://github.com/shenweiyan/WebStack-Hugo"
     - name: 源码
-      url: https://github.com/shenweiyan/NavBioIT
+      url: "#"
+    - name: 图标
+      url: "#"
